First test on mobile; Fix overflow-scroll and size for orders; Add/remove functionality for +/- buttons; Save state to localstorage; Fix for prices - number with 2 decimals

--- a/app/styles/_orders.sass
+++ b/app/styles/_orders.sass
@@ -3,7 +3,6 @@
   position: fixed
   z-index: 10
   width: $full
-  max-height: 50%
   +box-shadow(0 0px 30px 10px rgba(0,0,0,0.5))
 
   header
@@ -62,7 +61,8 @@
   background-color: $orders-item__bg
   overflow: hidden
   overflow-y: auto
-  max-height: 250px
+  -webkit-overflow-scrolling: touch
+  max-height: 150px
 
   &.scrolling
     +box-shadow(inset 0 20px 20px -20px darken($orders-item__bg, 40), inset 0 -20px 20px -20px darken($orders-item__bg, 40))
